--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
 <body>
 	<table border="1">
 		<tr>
-			<td>
-				1
-			</td>
+			<td>หน้าแรก</td>
 		</tr>
 		<tr>
-			<td></td>
+			<td>หน้าสอง</td>
 		</tr>
 		<tr>
-			<td></td>
+			<td>หน้าสาม</td>
 		</tr>
 		<tr>
-			<td></td>
+			<td>1</td>
 		</tr>
 		<tr>
 			<td></td>
